@@ -1,16 +1,13 @@
 package com.FA24SE088.OnlineForum.configuration;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
+import org.apache.catalina.connector.Connector;
+import org.springframework.boot.web.embedded.tomcat.TomcatServletWebServerFactory;
+import org.springframework.boot.web.servlet.server.ServletWebServerFactory;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.Ordered;
-import org.springframework.core.annotation.Order;
 
-import java.io.ByteArrayInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.security.KeyFactory;
 import java.security.KeyStore;
 import java.security.PrivateKey;
@@ -18,15 +15,16 @@ import java.security.cert.Certificate;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
 import java.security.spec.PKCS8EncodedKeySpec;
+import java.util.ArrayList;
 import java.util.Base64;
+import java.util.List;
 
 @Configuration
-@Order(Ordered.HIGHEST_PRECEDENCE)
 public class SSLConfiguration {
     private static final String KEY_STORE_PATH = "src/main/resources/keystore.p12";
-    private static final String PRIVATE_KEY_PATH = "src/main/resources/privkey.pem";
-    private static final String CERT_PATH = "src/main/resources/cert.pem";
-    private static final String CHAIN_PATH = "src/main/resources/chain.pem";
+    private static final String PRIVATE_KEY_PATH = "privkey.pem";
+    private static final String CERT_PATH = "cert.pem";
+    private static final String CHAIN_PATH = "fullchain.pem";
     private static final String KEYSTORE_PASSWORD = "password";
     private static final String KEY_ALIAS = "keyAlias";
 
@@ -36,22 +34,41 @@ public class SSLConfiguration {
     }
 
     private void createKeyStore() throws Exception {
+        File keystoreFile = new File(KEY_STORE_PATH);
+        if (keystoreFile.exists()) {
+            System.out.println("Keystore already exists at: " + KEY_STORE_PATH);
+            return;
+        }
+
         PrivateKey privateKey = loadPrivateKey(PRIVATE_KEY_PATH);
         X509Certificate certificate = loadCertificate(CERT_PATH);
-        Certificate[] certificateChain = loadCertificateChain(CHAIN_PATH);
+        Certificate[] certificateChain = loadCertificateFullChain(CHAIN_PATH);
 
+        // Create a KeyStore instance for PKCS12
         KeyStore keyStore = KeyStore.getInstance("PKCS12");
         keyStore.load(null, null);
 
-        keyStore.setKeyEntry(KEY_ALIAS, privateKey, KEYSTORE_PASSWORD.toCharArray(), certificateChain);
+        // Store the private key and certificate chain into the keystore
+        keyStore.setKeyEntry(KEY_ALIAS, privateKey,
+                KEYSTORE_PASSWORD.toCharArray(), certificateChain);
 
+        // Write the keystore to the specified file
         try (FileOutputStream fos = new FileOutputStream(KEY_STORE_PATH)) {
             keyStore.store(fos, KEYSTORE_PASSWORD.toCharArray());
+            System.out.println("Keystore created successfully at: " + KEY_STORE_PATH);
+        } catch (IOException e) {
+            System.err.println("Error writing keystore to file: " + e.getMessage());
+            e.printStackTrace();
         }
     }
 
     private PrivateKey loadPrivateKey(String privateKeyPath) throws Exception {
-        String privateKeyContent = new String(java.nio.file.Files.readAllBytes(java.nio.file.Paths.get(privateKeyPath)));
+        InputStream privateKeyInputStream = getClass().getClassLoader().getResourceAsStream(privateKeyPath);
+        if (privateKeyInputStream == null) {
+            throw new IOException("Private key file not found: " + privateKeyPath);
+        }
+
+        String privateKeyContent = new String(privateKeyInputStream.readAllBytes());
         privateKeyContent = privateKeyContent.replace("-----BEGIN PRIVATE KEY-----", "")
                 .replace("-----END PRIVATE KEY-----", "").replaceAll("\\s", "");
 
@@ -62,7 +79,13 @@ public class SSLConfiguration {
     }
 
     private X509Certificate loadCertificate(String certPath) throws Exception {
-        String certContent = new String(java.nio.file.Files.readAllBytes(java.nio.file.Paths.get(certPath)));
+        // Read certificate file content
+        InputStream certInputStream = getClass().getClassLoader().getResourceAsStream(certPath);
+        if (certInputStream == null) {
+            throw new IOException("Certificate file not found: " + certPath);
+        }
+
+        String certContent = new String(certInputStream.readAllBytes());
         certContent = certContent.replace("-----BEGIN CERTIFICATE-----", "")
                 .replace("-----END CERTIFICATE-----", "").replaceAll("\\s", "");
 
@@ -71,21 +94,55 @@ public class SSLConfiguration {
         return (X509Certificate) certFactory.generateCertificate(new ByteArrayInputStream(encodedCert));
     }
 
-    private Certificate[] loadCertificateChain(String chainPath) throws Exception {
-        String chainContent = new String(java.nio.file.Files.readAllBytes(java.nio.file.Paths.get(chainPath)));
+    private Certificate[] loadCertificateFullChain(String chainPath) throws Exception {
+        InputStream chainInputStream = getClass().getClassLoader().getResourceAsStream(chainPath);
+        if (chainInputStream == null) {
+            throw new IOException("Certificate chain file not found: " + chainPath);
+        }
+
+        String chainContent = new String(chainInputStream.readAllBytes());
+
         String[] certs = chainContent.split("-----END CERTIFICATE-----");
 
-        Certificate[] certificates = new Certificate[certs.length];
+        List<Certificate> certificatesList = new ArrayList<>();
         CertificateFactory certFactory = CertificateFactory.getInstance("X.509");
 
-        for (int i = 0; i < certs.length; i++) {
-            if (certs[i].contains("-----BEGIN CERTIFICATE-----")) {
-                String cert = certs[i].replace("-----BEGIN CERTIFICATE-----", "")
-                        .replace("-----END CERTIFICATE-----", "").replaceAll("\\s", "");
+        for (String cert : certs) {
+            if (cert.contains("-----BEGIN CERTIFICATE-----")) {
+                cert = cert.replace("-----BEGIN CERTIFICATE-----", "")
+                        .replace("-----END CERTIFICATE-----", "")
+                        .replaceAll("\\s", "");
                 byte[] encodedCert = Base64.getDecoder().decode(cert);
-                certificates[i] = certFactory.generateCertificate(new ByteArrayInputStream(encodedCert));
+                certificatesList.add(certFactory.generateCertificate(new ByteArrayInputStream(encodedCert)));
             }
         }
-        return certificates;
+
+        if (certificatesList.isEmpty()) {
+            throw new IOException("No valid certificates found in the chain file.");
+        }
+
+        return certificatesList.toArray(new Certificate[0]);
+    }
+
+    @Bean
+    public ServletWebServerFactory servletContainer() {
+        TomcatServletWebServerFactory factory = new TomcatServletWebServerFactory();
+
+        // Add the SSL connector to the Tomcat server
+        factory.addConnectorCustomizers(connector -> {
+            connector.setScheme("https");
+            connector.setSecure(true);
+            connector.setPort(8080);
+
+            // Set up SSL properties using connector attributes
+            connector.setProperty("keystoreFile", new File("src/main/resources/keystore.p12").getAbsolutePath());
+            connector.setProperty("keystorePass", "password");
+            connector.setProperty("keyAlias", "keyAlias");
+            connector.setProperty("keystoreType", "PKCS12");
+            connector.setProperty("clientAuth", "false");
+            connector.setProperty("sslProtocol", "TLS");
+        });
+
+        return factory;
     }
 }
